--- a/lab4.2/lab4.2/lab4.2.vcxproj.filters
+++ b/lab4.2/lab4.2/lab4.2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab4.2.cpp">
+    <ClCompile Include="lab4.2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
