--- a/lab4.2/lab4.2/lab4.2.vcxproj
+++ b/lab4.2/lab4.2/lab4.2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{38b029a2-9281-4207-aeb3-da984b36474c}</ProjectGuid>
-    <RootNamespace>Lab42</RootNamespace>
+    <ProjectGuid>{8a6d7b0f-0904-469d-821a-d671a5b053ae}</ProjectGuid>
+    <RootNamespace>lab42</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab4.2.cpp" />
+    <ClCompile Include="lab4.2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
